ingress/ingress-host.yaml
# https://kubernetes.github.io/ingress-nginx/user-guide/basic-usage/
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth

spec:
  ingressClassName: nginx
  rules:
  - host: bear.99.81.177.250.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80
  - host: moose.99.81.177.250.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80
